@@ -43,3 +43,9 @@ div.dataTables_info {
 div.dataTables_length {
   float: right;
 }
+
+.messages {
+  margin: auto;
+  width: 50%;
+  margin-top: 10px;
+}
